tests/fixtures/invalid/max_none_set.py
# Cannot call max() with None, Set[int]
x = max(None, {1, 2, 3})
